fix : service오류수정, 권한수정